2011-05-23  Thouraya ANDOLSI  <thouraya.andolsi@st.com>

Reviewed by Gavin Barraclough.

        [SH4] AssemblerLabel does not name a type
        https://bugs.webkit.org/show_bug.cgi?id=59927

        SH4Assembler.h file shoold be included before AbstractMacroAssembler.h.

        * assembler/MacroAssemblerSH4.h:

Canonical link: https://commits.webkit.org/76663@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87076 268f45cc-cd09-0410-ab3c-d52691b4dbfc